2003-02-02  Borut Razem <borut.razem@siol.net>

	* Makefile.bcc: removed non existing cpp project and non compilable izt project from makefile
	* as/mcs51/asm.h: fixed compilation with Borland C
	* support/cpp2/Makefile.bcc: added rule to generate auto-host.h
	* support/cpp2/auto-host_vc_in.h: fixed compilation with Borland C
	* src/mcs51/mcs51a.dsp: corrected misspelled project name from msc51a to mcs51a
	* src/avr/Makefile.bcc, src/ds390/Makefile.bcc, src/izt/Makefile.bcc,
	src/mcs51/Makefile.bcc, src/pic16/Makefile.bcc, src/xa51/Makefile.bcc,
	src/z80/Makefile.bcc: delete $(LIB) only if exist
	* src/Makefile.bcc, src/pic/Makefile.bcc:  fixed compilation with Borland C

2003-02-02  Bernhard Held <bernhard@bernhardheld.de>

	* device/include/malloc.h: introduced NULL
	* device/include/string.h: introduced NULL
	* device/include/stdlib.h: introduced NULL
	* device/lib/_memcpy.c: removed NULL
	* device/lib/_strcat.c: removed NULL
	* device/lib/_strchr.c: removed NULL
	* device/lib/_strcmp.c: removed NULL
	* device/lib/_strcpy.c: removed NULL
	* device/lib/_strcspn.c: removed NULL
	* device/lib/_strlen.c: removed NULL
	* device/lib/_strncat.c: removed NULL
	* device/lib/_strncmp.c: removed NULL
	* device/lib/_strncpy.c: removed NULL
	* device/lib/_strpbrk.c: removed NULL
	* device/lib/_strrchr.c: removed NULL
	* device/lib/_strspn.c: removed NULL
	* device/lib/_strstr.c: removed NULL
	* device/lib/_strtok.c: removed NULL
	* device/lib/malloc.c: removed NULL, include own header

2003-02-02    <johan@balder>

	* src/mcs51/ralloc.c (packForPush): fixed bug #631653, maybe other ports need this too? At least now some new alerts in SDCCBBlock.c and SDCCicode.c gives an early warning
	* support/regression/fwk/lib/testfwk.c: div and mod isn't broken anymore
	* regressions ds390/spec.mk and mcs51/spec.mk (timeout): my good old balder isn't fast enough for some tests
	* src/z80/gen.c (genZ80Code): added c-lines in asm comments